docs: rewrite README.md as install documentation with current filenames and hash verification notes